# imr

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  checkerboard.glsl
examples/12_render_pipeline/: 12_render_pipeline.cpp  CMakeLists.txt
examples/12_render_pipeline/libs/: camera.cpp  camera.h  model.cpp  model.h  primitives.h
examples/12_render_pipeline/shaders/: CMakeLists.txt  math.h  noise.glsl  noise.h  shader.frag  shader.frag.cpp  shader.vert  shader.vert.cpp  shader.vert.spv
examples/14_compute_cube/: 14_compute_cube.cpp
examples/15_compute_cubes/: 15_compute_cubes.cpp  15_compute_cubes.glsl  CMakeLists.txt
examples/20_render_pipeline/: 20_render_pipeline.cpp  CMakeLists.txt  tooling.cpp  tooling.h
examples/20_render_pipeline/libs/: CMakeLists.txt  base_objects.h  camera.cpp  camera.h  model.cpp  primitives.h  ra_math.h  scene.cpp  scene.h  tooling.cpp  tooling.h
examples/20_render_pipeline/models/: base_objects.h
examples/20_render_pipeline/models/cornellbox/: cornellBoxFlat.blend  scene.ini
examples/20_render_pipeline/models/cube/: Cube.blend  Cube.glb  scene.ini
examples/20_render_pipeline/models/plane/: plane.ini  scene.ini
examples/20_render_pipeline/models/sponza/: scene.ini
examples/20_render_pipeline/shaders/: CMakeLists.txt  noise.glsl  shader.bunny.frag  shader.bunny.vert  shader.frag  shader.model.frag  shader.model.vert  shader.plane.frag  shader.plane.tesc  shader.tesc  shader.tese  shader.tex.frag  shader.tex.vert  shader.vert
examples/20_render_pipeline/shaders/shady/: shader.vert.cpp
examples/mesh_shading_basic/: CMakeLists.txt  mesh_shading_basic.cpp  meshshader.mesh  meshshader.task
hpg_demo/: CMakeLists.txt  main.cpp
hpg_demo/shaders/: CMakeLists.txt  common_math.h  shader.frag.cpp  shader.vert.cpp
imr/include/imr/: imr.h
imr/src/: context.cpp  device.cpp  frame.cpp  shader.cpp  swapchain.cpp  swapchain_private.h
rap_god/: CMakeLists.txt  rap_god.cpp  rap_god.frag  rap_god.vert
